# leetcode

./: .eslintrc.js  .gitignore  .prettierignore  .prettierrc.json  README.md  eslint.config.mjs  jest.config.js  jest.setup.js  package-lock.json  package.json  pyproject.toml  scripts.py  tsconfig.json
.github/workflows/: build-and-test.yml  build.yml  ci.yml
scripts/: clean.mjs
src/array/: best-time-to-buy-and-sell-stock-ii.ts  buildings-with-an-ocean-view.ts  design-hit-counter.ts  dot-product-of-two-sparse-vectors.ts  find-peak-element.ts  group-anagrams.ts  longest-consecutive-sequence.ts  max-chunks-to-make-sorted.ts  maximum-swap.ts  merge-sorted-array.ts  pascals-triangle.ts  top-k-frequent-elements.ts  two-sum.ts
src/binary-search/: README.md  find-peak-element.ts  find-the-smallest-divisor-given-a-threshold.ts  k-th-missing-positive-number.ts  longest-increasing-subsequence.ts  median-of-two-sorted-arrays.ts  random-pick-with-weight.ts  search-in-rotated-sorted-array.ts
src/dynamic-programming/: README.md  arithmetic-slices-ii-subsequences.ts  max-subarray.ts  word-break-i.ts
src/graph/: bfs.ts  bus-routes.ts  dfs.ts  nested-list-weighted-sum-ii.ts  nested-list-weighted-sum.ts  number-of-islands.ts  shortest-path-in-binary-matrix.ts  smallest-greater-multiple-made-of-two-digits.ts  (+1 more)
test/: add-two-numbers.test.ts  bfs.test.ts  coin-sum.test.ts  conftest.py  depth-first-search.test.ts  dfs.test.ts  jest.setup.js  numbers-of-orders-in-the-backlog.test.ts  permutations.test.ts  power-set.test.ts  something.test.ts  two-sum.test.ts  valid-palindrome.test.ts
(+715 files in other folders)
